2000-02-25  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * makemake.in: Don't install emacs/*.el any more.

2000-02-22  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * arimips.d (subx_loop_down): If compiling for n32 ABI, the fifth
          argument comes in a register, not from the stack.

2000-02-18  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (oint_symbolflags_shift): Remove obsolete definition.

2000-01-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Permit setting *terminal-encoding* to an iconv based stream.
        * lispbibl.d (set_terminalstream_external_format): New declaration.
        * stream.d (set_terminalstream_external_format): New function.
        * encoding.d (SYSTEM::SET-FOREIGN-ENCODING): Call it.

2000-01-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * errunix.d (init_errormsg_table): Add EILSEQ.

2000-01-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * encoding.d (encoding_from_name): Recognize ISO-8859-3.

2000-01-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * configure: Create a libiconv subdirectory, link over the configure
          script, and run it with --enable-static --disable-shared.
        * win32msvc/INSTALL: Must pre-build libiconv.
        * makemake.in (USE_LIBICONV, XCL_ICONVLIB): New variables.
          (FILES): On Unix, add libiconv.a.
          (LIBS): Ad $XCL_ICONVLIB.
          (EVERY_INCLUDES_H): Add iconv.h.
          (iconv.h, libiconv.a): New targets.
          (clean1): Also remove libiconv.a.
          (clean4): Also remove iconv.h.
        * lispbibl.d (GNU_LIBICONV): Define always. Include "iconv.h".
          (max_bytes_per_chart): Increase to 8, for ISO-2022-CN[-EXT].
        * stream.d: Treat GNU_LIBICONV like HAVE_ICONV.
          (CLISP_INTERNAL_CHARSET): If using GNU_LIBICONV, define to
          "UCS-2-INTERNAL".
          (iconv_init): New macro.